# Kriel2026_ssd_nonlinear

./: .gitignore  README.md  pyproject.toml
TR_gp_modelling/data/: Re500Mach0.5Pm1576v1.csv  Re500Mach0.5Pm1576v2.csv  Re500Mach0.5Pm1576v3.csv  Re500Mach0.5Pm1576v4.csv  Re500Mach0.5Pm1576v5.csv
data/Mach0.1Re1500Pm1Nres576v1/: stage1_fitted_posterior_samples.npy  stage1_output_posterior_samples.npy
datasets/: summary.json  summary_stats.json
estimate_ssd_phases/: dev_mcmc.py  test.py  test.py.py  using_gradients.py  using_mcmc.py
playground/: demo_estimate_ssd_phases_using_gradients.py
scripts/: check_alpha_scaling.py  collect_sim_data.py  fit_with_mcmc.py  plot_alpha_scaling.py  plot_beta_scaling.py  plot_combined.py  plot_delta_t_nl_scaling.py  plot_example_fit.py  plot_gamma_exp_scaling.py  plot_nl_exponent.py  plot_nl_scalings.py  plot_time_evolution.py  submit_mcmc_jobs.py  test_sat.py
scripts/aggregate_stats/: extract_mcmc_stats.py  print_summary_table.py
scripts/build_datasets/: collect_sim_data.py  collect_sim_dataset.py  extract_mcmc_stats.py  extract_mcmc_summary_stats.py  extract_sim_summary.py  print_summary_table.py
scripts/fit_posteriors/: fit_with_mcmc.py  plot_fit_results.py  run_fitting_jobs.py  submit_fitting_jobs.py
scripts/fit_posteriors/mcmc_routines/: mcmc_base.py  mcmc_stage_1.py  mcmc_stage_2.py  mcmc_utils.py  plot_chain_evolution.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
scripts/fit_time_evolution/: fit_with_mcmc.py  submit_mcmc_jobs.py
scripts/fit_time_evolution/my_mcmc_fitting_routine/: base_mcmc.py  mcmc_stage_1.py  mcmc_stage_2.py  mcmc_stage_2_free.py  mcmc_stage_2_linear.py  mcmc_stage_2_quadratic.py  mcmc_utils.py  plot_chain_evolution.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
scripts/fit_time_evolution/my_mcmc_routine/: base_mcmc.py  mcmc_stage_1.py  mcmc_stage_2_free.py  mcmc_stage_2_quadratic.py  plot_chain_evolution.py
scripts/mcmc_fitting/: fit_with_mcmc.py  submit_fitting_jobs.py
scripts/mcmc_fitting/mcmc_routines/: mcmc_base.py  mcmc_stage_1.py  mcmc_stage_2.py  mcmc_utils.py  plot_chain_evolution.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
scripts/my_mcmc_routine/: __init__.py  base_mcmc.py  mcmc_stage_1.py  mcmc_stage_2.py  mcmc_stage_2_free.py  mcmc_stage_2_linear.py  mcmc_stage_2_quadratic.py  mcmc_utils.py  plot_chain_evolution.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
scripts/my_utils/ww_mcmc/: __init__.py  base_mcmc.py  mcmc_base.py  mcmc_stage_1.py  mcmc_stage_2.py  plot_chain_evolution.py  plot_final_fit.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
scripts/paper_analysis/: compare_model_fits.py  compare_models.py  plot_gamma_exp_scaling.py  plot_helpers.py  plot_nl_duration.py  plot_nl_exponent.py  plot_nl_scalings.py  plot_time_evolution.py
scripts/plot_results/: compare_models.py  plot_gamma_exp_scaling.py  plot_helpers.py  plot_nl_exponent.py  plot_nl_scalings.py  plot_time_evolution.py
scripts/ww_datasets/: extract_mcmc_stats.py  print_summary_table.py
