[project]
name = "kriel-2025-ssd-nl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "corner>=2.2.3",
  "emcee>=3.1.6",
  "jormi",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
]

[tool.uv.sources]
jormi = { git = "https://github.com/AstroKriel/PythonHelpers.git", rev = "031f175ddb23c3eea9abf5a0f67ff640a38559a4" }

[tool.pyright]
include = ["scripts"]
reportExplicitAny = "none"          # basedpyright-specific: flags every `Any`; unavoidable in numpy/scipy code
reportAny = "none"                  # basedpyright-specific: noisy cascade of the above
reportUnknownArgumentType = "none"  # cascade from untyped third-party packages (emcee, scipy); not actionable
reportUnknownMemberType = "none"    # cascade from untyped third-party packages; not actionable
reportUnknownVariableType = "none"  # cascade from untyped third-party packages; not actionable
reportImplicitOverride = "none"     # too verbose to require @override on every subclass method
reportMissingTypeStubs = "none"     # emcee, tqdm, and other deps ship no stubs; not actionable
reportImplicitStringConcatenation = "none"  # implicit string concat is used intentionally
